[package]
name = "chaos"
version = "0.1.0"
authors = ["avoid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
dotenv = "0.15"