[package]
name = "chaos"
version = "0.1.0"
authors = ["avoid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
dotenv = "0.15"
postgres = "0.17.5"
rocket_contrib = "0.4.5"
bcrypt = "0.8.2"
jsonwebtoken = "7.2.0"